Update: change from sendMultipleEmails to individual

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,4 +39,4 @@ jobs:
           text: |
             Hello %name%
             I've sended multiple emails
-          sendMultipleEmails: true
+          individual: true
